# SaaS-Mecanicos

./: .claudeignore  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
SaaS_mecanico_vault/: AGENT.md  index.md  log.md
SaaS_mecanico_vault/.obsidian/: workspace.json
SaaS_mecanico_vault/sources/: VHC_inspeccion_vehicular.md  documentacion_inicial.md  estructura_base_datos.md  historial_entrevistas_usuario.md  modelo_negocio.md
SaaS_mecanico_vault/wiki/: arquitectura_tecnica.md  base_de_datos.md  entrevistas_usuario.md  modelo_negocio.md  overview.md  propuesta_valor.md  resumen.md  roadmap.md  vhc.md
src/: app.py
src/components/: history_view.py  login.py  record_form.py
src/controllers/: auth_controller.py  record_controller.py
src/data/: cars.json  database.py
src/utils/: car_selector.py  utils.py
