[project]
name = "mvp-taller-mecanico"
version = "0.1.0"
description = "SaaS para gestión de talleres mecánicos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "streamlit>=1.55.0",
    "streamlit-cookies-controller>=0.0.4",
    "supabase>=2.28.0",
]

# 💡 AGREGA ESTAS LÍNEAS AL FINAL PARA INFORMARLE A LA NUBE QUE ES UN PROYECTO DE UV
[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]